tooling/nargo_cli/tests/snapshots/execution_success/brillig_cow/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "original",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "index",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 64
        },
        "visibility": "private"
      },
      {
        "name": "expected_result",
        "type": {
          "kind": "struct",
          "path": "ExecutionResult",
          "fields": [
            {
              "name": "original",
              "type": {
                "kind": "array",
                "length": 5,
                "type": {
                  "kind": "field"
                }
              }
            },
            {
              "name": "modified_once",
              "type": {
                "kind": "array",
                "length": 5,
                "type": {
                  "kind": "field"
                }
              }
            },
            {
              "name": "modified_twice",
              "type": {
                "kind": "array",
                "length": 5,
                "type": {
                  "kind": "field"
                }
              }
            }
          ]
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1bPWwjRRSetXcdrx2fHd8hCiQ6SiT7Yic5CUQKJEiBdAUSCBp8uYuupKFFKyQKKjoqRH8NkSJRnGigQgKEkKgpkCiQkKgoKcgk8+LPn9+O18ms4z1lJGvGM2/mffPNmzc/uxuZ83Dn9Be5dOzixMURpA3k2bDv4sHVwjBgW4OyMEYVwFirAMZ6BTDGJWAsA2cSEOcq5nmjAmO/UQGMzQpgTCuAsWWqNX/aFeB0swIYOxXAeKsCGLumWvOnVwFOtyqAsV8BjLcrgPFOCRjPwnOQtqDtwcBuvO3G1k4yuxGzGx27kbALtV0I7eJinbd1jtb52MltJ4w1SDvgltA7Jj8IOb+4ROr+16A84OZ/mJLekO3vDcb3UqV/AfFvp67NRintD8fS/kY5+AfS7uvZtH3si5TXXXyQTbk8gDrWJgVrOWM5GpXMxbhD/TfQF9HdLEf3TkT6kHMsE/0tU6bdnV+UoD7Bw/yIX+iITDbFE1FZnM33Q8oSKJPxtTKvghzbVoPKBIsNYpspcGNMcJuc3NhktWyyTmVxNt+PZW0SOREcMjZxCVyc2t3Rjd1Vy+5iKouz+X4sa3doW2x3SQlcnO6nbtZgUy27S6gszub7sazdoW01QO5NSB+4dLl7wvP9Pa79gcdgcFvBj7ps2MjMRRB7qUOe8Co8N1GeylIoi7NZPS33PwY92JbgSEj+Dfe/6+IG1JH6PUV/g/TP4FbymJdUkU8VeXyg0HY/a0NPoiluzeectWdK9QkDGXs5Rwr3rHMD+oTymLYhobz7LrZtHUfTOtimAZ2YJ/z1zPw+ROQ07mLiLi2Zu5bCXerhrgVlkkbuJO9dE467uCB3CXHXKpm7tsJdy8NdG8okjdxJ3gcmHHdJQe4i4q5dMnebCndtD3ebUCZp5E7yHptw3EUKHq6nrW+pgjnkPkywXewNcnCJfsFzC8pMODzDhPB8aKZjcBLNYhCZcPqHD3z3GxdrQ1bKWOzYPn7jlMkerAt9TAhTD8rqijzakv1tKfI9kJHx7pE8cq3N9y7ww22WMd8FV7ygHzWlH8hBQnkfuzjEfO8qeLQzVcCXV4baOMdm3q+wr+67/40c+S3iS+Q/Bb5+ima50epHUI44kpx6m6RX5D8DvScwX870Z9P6aJdnXGSzOPZd/uBqQZ23aBs8b7V5qNkSjw/KI6dse30o43nL64vwg7KrnLcdpR/LztsvXKzN25rCHeb59tY1D3cRcbdVMnd9hTvNBmpm3gb6CneS95UJx12k4NHu7KOcWPRwHuvBcZB9SNfM95vt+zaV7bv/gysG6bs8b8UxQp196A/KY9qGhPKeuFgbI8039D3c1RU8qdG52w/ET6r0N+T9Gd8l8pp2bGY5awLPdaUurzsi/2U0bfPE5XVJZpHfWLczOfuNomfypy4O4TfigtzxPvO6z+TMXdEz+fcmHHddBc+qfS72m+277D2F7Pvz9hRt6A/KY9qGhPJ+drE2Rm3ijvN89i1yi3zWr2ZWZwo4i/gskf8cfNZvLq9r8v3Aqm0H5xPfuZV9b3TxrMTo90Yt6A/bFd498J3F7y7WbKdF3HGe785N5BbZzh9G11nUdkT+E7CdP12eNm41qi9r4V8uLvvZDe5b8jCJrf+9RpiEw3/WAFORM851P3vh9bbos5d/XVzWGafIXqWq+7z/TDjuugW543NbVfd5cRSOu8veS1z3GsrcFV1DNwNyp83ZVe9zeB9sw7rcl3egPyiPaRv43u15zxh1iDvO89m3yC3a57xAOi97rv8I9jkvunTXLDfv+NxT0rtCA+5rnNNXnne4juJ7RszFSwHn3WXP9VXdZ7wckLt1ONdjv9m+r3tNxu9VUB7TNvCavOcZo5S44zyffYuc9v46+qxXSGcDcNaVuuyzRP4x+KzXyGdp827VtoO+iM/11z2/G9CfZeb3gcd2GsQd5/nO9fx9Q57tvBXIdt4H27lPtoP1+bwqNvG2E1qHM7TY+jtrhEnK3lsDTNbvaXOSzwya78MPfFleu8dKScYY/flIq0Bbvufh2v1ry6MbcWFdrJcoOLk/TQVPQ2lL849NakvzFzh+8qzM9z0U+oTLjnEMeaseY9+7SjdjfB5wz+B71ujjuQ55y/IsOHw8+9qKPLq1M2LboxtxYV2slyg42W5SBU9TaUsb4zx7wT6gvfAYNxSdeJb13a/7ePP5au09QbyPYJ5xDHoF2vL56kXvHLJuxIV1sV6i4OyQ3raCp6W0pY0x27U2p4qOsdTF5zK+52++ueTz1SHmkq8tn68OYV+MJVFw5o1L3vyUtrQxzvMJ2IeiYyx18bntja+elj1rvvrYpct8r3R37/w8e4Y1m/KF9mFIf0LyX7sGkFOJr/Le8dHuZHi0PTmajCcPH44OJ3z+sAHPH6H1T3a39w7vjg53H4y3J9s7K9d/ON55cDgaTwaPhvbv3UX6te/x8D1lGzbcf/zmD+XxjInyT10D1i6/dWn+zhP1WbkfPXJRTnzWhpIXZ7N52reA+I2kyIvuVjaPUcraUJaQnk33H/nCtgRHQvI/uAZkTPC7RqnfU/Q3Sf8MbiUP/RC3VVfyRN6Oz3c0b7HvId+bFGwNah/zGJvYThnz6nRK7R5OdofDe6Pho9FwvGhe/Q9ku+zgEVcAAA==",
  "debug_symbols": "tZndTiM7EITfJddc2O3f5lVWCAUIq0hRQFk40hHi3dc17iJwMaPRWHtDfdmMaz013bY1+dg9HR7ef98fz88vf3a3vz52D5fj6XT8fX96edy/HV/O7V8/dg5/tO5u5WanOol3ztSbimkwjabJNO9uA7SYVlPt6p2pN21+ERpMo2kyzabFtJpqV3Gm3tT8xPzE/MT8xPzE/KT5Jah2Dc7Um4ppMI2myTSbNr8MrabaNTpTbyqmwbT5VWgyzabFtJpq1+RMvamYBlPzS+aXzC+ZXzK/ZH65+XkH8AQhNEvvAZGQCJlQCJWgBsUROKrgGhRJaddo0+pMvamYBtNomkyzaTGtpuan5qfmp+an5qfmp5gRnr5mQiFgjnigaACAoAM6eIIQAiESEsF8BIXuMwCjKiAQIgGjFJAJhVAJaoCK7+AJQqAPqlocAG3cshfUdQdPEEIgREIiZEIhwDkA1AAV3sEThBAIkZAIcI6AQqgENUCtd/AEIQQCnBEvCr5DJhRCJagBqr6DJwghEOic6ZzpnOmc6ZzpjKoXPNPiCUKAM55OiYREyIRCqAQ1QLN0oA/aIeApox+kACpBDdASHTxBCIEQCYmQCXRWOqs5B+cIniCE5hwEEAmJgDkHQCFUghpMe8QEniCEQKAP+iK0Sgjoi5ABniAEjMLEsBt0SIRMKIRKUAP0Tgf6oC9CBWCUAipBDdAXHTxBCIEQCYnAaaAdogOoAdqhA/Y6DxBCIGC7Qyxoh2mGiVNFO0yQGS+KPyI6FH+HQIBPAiRCJmDnxAxR/FPymY8Axd/BSjSg1CP+U5R6h0yAz3RNJagBSj3hdrAxoMIDdoYOgWBLZUDxJ5QWir+DGqD4E+4Uxd9BCNjPcTtT8cNwKv4JMsG2gIhSTxngCUKATwFEQiLgaKCA0reAOG0KE6jBtCl4AM4DDhAJidB88nRNIVQCThntduK0KQjAE+Asn583O57x7t8uhwOOeN8Ofe0o+Lq/HM5vu9vz++l0s/tvf3qfLvrzuj9P+ra/tG/bRA7np6bN8Pl4OoA+b66j3fzQdqZSG92OT/plkH46+HmHgoKZDEouG8a3U2vkDJzkTQ4uXx38JodSvhzqtjnkenWYzWHpSUj9yqGtu3MOZXgOCw6tF82glejceF0az1JM0W8Y3456nEA77H1zWG+gLAX5UUxrE4iB7RCrm62DMBjBksG6DJYdRkPQ8nUP8yGU0RDKcAhlNIS1/Zjclo5umx0dYkhzDiJLFjleLfIWi1yZQ3F+011cp9C28dkppOGFacli1cokoyUpwyUpwyW5lMKq1Sn4wRSWDNalsOwwnMKa5Smk0RTScArpXy5P61aGpTnI9dzU3p+EDXfRhpXrXaRNDt/nMJdDXFjfSglc32reUI8rU/DDKfjhFPJYCktr07oUlh3WpLB+DnN3kdxYCn44BT+cgh9PIQ6mEIZTCMMphOEU6lgKOhqCjmagoxHkLUvjXfuwfzxefvzE9Amjy3H/cDrYx+f38+O3b9/+f+U3/Inq9fLyeHh6vxzgdP2dqv35FdubspjqXXtX0z61NyLF3+G3JnzVdvcYHD56fGwvYmL2d5+Y2F8=",
  "file_map": {
    "5": {
      "source": "use crate::meta::derive_via;\n\n#[derive_via(derive_eq)]\n// docs:start:eq-trait\npub trait Eq {\n    fn eq(self, other: Self) -> bool;\n}\n// docs:end:eq-trait\n\n// docs:start:derive_eq\ncomptime fn derive_eq(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn eq(_self: Self, _other: Self) -> bool };\n    let for_each_field = |name| quote { (_self.$name == _other.$name) };\n    let body = |fields| {\n        if s.fields_as_written().len() == 0 {\n            quote { true }\n        } else {\n            fields\n        }\n    };\n    crate::meta::make_trait_impl(\n        s,\n        quote { Eq },\n        signature,\n        for_each_field,\n        quote { & },\n        body,\n    )\n}\n// docs:end:derive_eq\n\nimpl Eq for Field {\n    fn eq(self, other: Field) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for u128 {\n    fn eq(self, other: u128) -> bool {\n        self == other\n    }\n}\nimpl Eq for u64 {\n    fn eq(self, other: u64) -> bool {\n        self == other\n    }\n}\nimpl Eq for u32 {\n    fn eq(self, other: u32) -> bool {\n        self == other\n    }\n}\nimpl Eq for u16 {\n    fn eq(self, other: u16) -> bool {\n        self == other\n    }\n}\nimpl Eq for u8 {\n    fn eq(self, other: u8) -> bool {\n        self == other\n    }\n}\nimpl Eq for u1 {\n    fn eq(self, other: u1) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for i8 {\n    fn eq(self, other: i8) -> bool {\n        self == other\n    }\n}\nimpl Eq for i16 {\n    fn eq(self, other: i16) -> bool {\n        self == other\n    }\n}\nimpl Eq for i32 {\n    fn eq(self, other: i32) -> bool {\n        self == other\n    }\n}\nimpl Eq for i64 {\n    fn eq(self, other: i64) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for () {\n    fn eq(_self: Self, _other: ()) -> bool {\n        true\n    }\n}\nimpl Eq for bool {\n    fn eq(self, other: bool) -> bool {\n        self == other\n    }\n}\n\nimpl<T, let N: u32> Eq for [T; N]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T; N]) -> bool {\n        let mut result = true;\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<T> Eq for [T]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T]) -> bool {\n        let mut result = self.len() == other.len();\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<let N: u32> Eq for str<N> {\n    fn eq(self, other: str<N>) -> bool {\n        let self_bytes = self.as_bytes();\n        let other_bytes = other.as_bytes();\n        self_bytes == other_bytes\n    }\n}\n\nimpl<A, B> Eq for (A, B)\nwhere\n    A: Eq,\n    B: Eq,\n{\n    fn eq(self, other: (A, B)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1)\n    }\n}\n\nimpl<A, B, C> Eq for (A, B, C)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n{\n    fn eq(self, other: (A, B, C)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2)\n    }\n}\n\nimpl<A, B, C, D> Eq for (A, B, C, D)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n{\n    fn eq(self, other: (A, B, C, D)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2) & self.3.eq(other.3)\n    }\n}\n\nimpl<A, B, C, D, E> Eq for (A, B, C, D, E)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n    E: Eq,\n{\n    fn eq(self, other: (A, B, C, D, E)) -> bool {\n        self.0.eq(other.0)\n            & self.1.eq(other.1)\n            & self.2.eq(other.2)\n            & self.3.eq(other.3)\n            & self.4.eq(other.4)\n    }\n}\n\nimpl Eq for Ordering {\n    fn eq(self, other: Ordering) -> bool {\n        self.result == other.result\n    }\n}\n\n// Noir doesn't have enums yet so we emulate (Lt | Eq | Gt) with a struct\n// that has 3 public functions for constructing the struct.\npub struct Ordering {\n    result: Field,\n}\n\nimpl Ordering {\n    // Implementation note: 0, 1, and 2 for Lt, Eq, and Gt are built\n    // into the compiler, do not change these without also updating\n    // the compiler itself!\n    pub fn less() -> Ordering {\n        Ordering { result: 0 }\n    }\n\n    pub fn equal() -> Ordering {\n        Ordering { result: 1 }\n    }\n\n    pub fn greater() -> Ordering {\n        Ordering { result: 2 }\n    }\n}\n\n#[derive_via(derive_ord)]\n// docs:start:ord-trait\npub trait Ord {\n    fn cmp(self, other: Self) -> Ordering;\n}\n// docs:end:ord-trait\n\n// docs:start:derive_ord\ncomptime fn derive_ord(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn cmp(_self: Self, _other: Self) -> std::cmp::Ordering };\n    let for_each_field = |name| quote {\n        if result == std::cmp::Ordering::equal() {\n            result = _self.$name.cmp(_other.$name);\n        }\n    };\n    let body = |fields| quote {\n        let mut result = std::cmp::Ordering::equal();\n        $fields\n        result\n    };\n    crate::meta::make_trait_impl(s, quote { Ord }, signature, for_each_field, quote {}, body)\n}\n// docs:end:derive_ord\n\n// Note: Field deliberately does not implement Ord\n\nimpl Ord for u128 {\n    fn cmp(self, other: u128) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\nimpl Ord for u64 {\n    fn cmp(self, other: u64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u32 {\n    fn cmp(self, other: u32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u16 {\n    fn cmp(self, other: u16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u8 {\n    fn cmp(self, other: u8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i8 {\n    fn cmp(self, other: i8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i16 {\n    fn cmp(self, other: i16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i32 {\n    fn cmp(self, other: i32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i64 {\n    fn cmp(self, other: i64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for () {\n    fn cmp(_self: Self, _other: ()) -> Ordering {\n        Ordering::equal()\n    }\n}\n\nimpl Ord for bool {\n    fn cmp(self, other: bool) -> Ordering {\n        if self {\n            if other {\n                Ordering::equal()\n            } else {\n                Ordering::greater()\n            }\n        } else if other {\n            Ordering::less()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl<T, let N: u32> Ord for [T; N]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T; N]) -> Ordering {\n        let mut result = Ordering::equal();\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<T> Ord for [T]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T]) -> Ordering {\n        let mut result = self.len().cmp(other.len());\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<A, B> Ord for (A, B)\nwhere\n    A: Ord,\n    B: Ord,\n{\n    fn cmp(self, other: (A, B)) -> Ordering {\n        let result = self.0.cmp(other.0);\n\n        if result != Ordering::equal() {\n            result\n        } else {\n            self.1.cmp(other.1)\n        }\n    }\n}\n\nimpl<A, B, C> Ord for (A, B, C)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n{\n    fn cmp(self, other: (A, B, C)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D> Ord for (A, B, C, D)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n{\n    fn cmp(self, other: (A, B, C, D)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D, E> Ord for (A, B, C, D, E)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n    E: Ord,\n{\n    fn cmp(self, other: (A, B, C, D, E)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        if result == Ordering::equal() {\n            result = self.4.cmp(other.4);\n        }\n\n        result\n    }\n}\n\n// Compares and returns the maximum of two values.\n//\n// Returns the second argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::max(1, 2), 2);\n// assert_eq(cmp::max(2, 2), 2);\n// ```\npub fn max<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v1\n    } else {\n        v2\n    }\n}\n\n// Compares and returns the minimum of two values.\n//\n// Returns the first argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::min(1, 2), 1);\n// assert_eq(cmp::min(2, 2), 2);\n// ```\npub fn min<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v2\n    } else {\n        v1\n    }\n}\n\nmod cmp_tests {\n    use crate::cmp::{max, min};\n\n    #[test]\n    fn sanity_check_min() {\n        assert_eq(min(0 as u64, 1 as u64), 0);\n        assert_eq(min(0 as u64, 0 as u64), 0);\n        assert_eq(min(1 as u64, 1 as u64), 1);\n        assert_eq(min(255 as u8, 0 as u8), 0);\n    }\n\n    #[test]\n    fn sanity_check_max() {\n        assert_eq(max(0 as u64, 1 as u64), 1);\n        assert_eq(max(0 as u64, 0 as u64), 0);\n        assert_eq(max(1 as u64, 1 as u64), 1);\n        assert_eq(max(255 as u8, 0 as u8), 255);\n    }\n}\n",
      "path": "std/cmp.nr"
    },
    "50": {
      "source": "// Tests the copy on write optimization for arrays. We look for cases where we are modifying an array in place when we shouldn't.\nglobal ARRAY_SIZE: u32 = 5;\n\nstruct ExecutionResult {\n    original: [Field; ARRAY_SIZE],\n    modified_once: [Field; ARRAY_SIZE],\n    modified_twice: [Field; ARRAY_SIZE],\n}\n\nimpl ExecutionResult {\n    fn is_equal(self, other: ExecutionResult) -> bool {\n        (self.original == other.original)\n            & (self.modified_once == other.modified_once)\n            & (self.modified_twice == other.modified_twice)\n    }\n}\n\nfn modify_in_inlined_constrained(original: [Field; ARRAY_SIZE], index: u64) -> ExecutionResult {\n    let mut modified = original;\n\n    modified[index] = 27;\n\n    let modified_once = modified;\n\n    modified[index + 1] = 27;\n\n    ExecutionResult { original, modified_once, modified_twice: modified }\n}\n\nunconstrained fn modify_in_unconstrained(\n    original: [Field; ARRAY_SIZE],\n    index: u64,\n) -> ExecutionResult {\n    let mut modified = original;\n\n    modified[index] = 27;\n\n    let modified_once = modified;\n\n    modified[index + 1] = 27;\n\n    ExecutionResult { original, modified_once, modified_twice: modified }\n}\n\nunconstrained fn main(original: [Field; ARRAY_SIZE], index: u64, expected_result: ExecutionResult) {\n    assert(expected_result.is_equal(modify_in_unconstrained(original, index)));\n    assert(expected_result.is_equal(modify_in_inlined_constrained(original, index)));\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
