tooling/nargo_cli/tests/snapshots/execution_success/brillig_cow/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 5], v1: u32, v2: [Field; 5], v3: [Field; 5], v4: [Field; 5]):
    (no terminator instruction)
}
